[gd_scene load_steps=41 format=3 uid="uid://c3iyobobkeik5"]

[ext_resource type="PackedScene" uid="uid://bctcp65yp8t3f" path="res://graphics/characters/godette/godette.glb" id="1_ajt42"]
[ext_resource type="Script" uid="uid://76xlax80b4t1" path="res://scenes/entities/player/godette_skin.gd" id="2_2vk48"]
[ext_resource type="PackedScene" uid="uid://cp757r6txb0j6" path="res://graphics/weapons/sword_1handed.gltf" id="3_asomj"]
[ext_resource type="Texture2D" uid="uid://bgh8x0rsl78s5" path="res://graphics/characters/godette/godette_godette_faces.png" id="3_w65gf"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://graphics/weapons/barbarian_texture.png" id="4_61nrs"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://graphics/weapons/wand.gltf" id="5_m6bsd"]
[ext_resource type="PackedScene" uid="uid://dydnnq3ww2uyk" path="res://graphics/weapons/shield.gltf.glb" id="5_xjw0u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pg4gy"]
albedo_texture = ExtResource("3_w65gf")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjw0u"]
albedo_texture = ExtResource("4_61nrs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m6bsd"]
albedo_texture = ExtResource("4_61nrs")

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_w65gf"]
filter_enabled = true
filters = [".", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r", "SecondAttackTimer"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m6bsd"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pg4gy"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ekju"]
xfade_time = 0.2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xjw0u"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0f30q"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tcqog"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fv0ua"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0f30q"]
states/Chop/node = SubResource("AnimationNodeAnimation_m6bsd")
states/Chop/position = Vector2(417, 100)
states/Slice/node = SubResource("AnimationNodeAnimation_pg4gy")
states/Slice/position = Vector2(417, 268)
transitions = ["Start", "Chop", SubResource("AnimationNodeStateMachineTransition_1ekju"), "Chop", "Slice", SubResource("AnimationNodeStateMachineTransition_xjw0u"), "Slice", "Chop", SubResource("AnimationNodeStateMachineTransition_0f30q"), "Chop", "End", SubResource("AnimationNodeStateMachineTransition_tcqog"), "Slice", "End", SubResource("AnimationNodeStateMachineTransition_fv0ua")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w65gf"]
animation = &"Block"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p240l"]
animation = &"Spellcast_Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_q5bn8"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2vk48"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_asomj"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_61nrs"]
animation = &"Running_B"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xjw0u"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m6bsd"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w65gf"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pg4gy"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p240l"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q5bn8"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vuvx4"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lv6f6"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_la81o"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_egpeb"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5uesj"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xfrml"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1ekju"]
states/Idle/node = SubResource("AnimationNodeAnimation_2vk48")
states/Idle/position = Vector2(351.06985, 100)
states/Jump/node = SubResource("AnimationNodeAnimation_asomj")
states/Jump/position = Vector2(560.0698, 100)
states/Run/node = SubResource("AnimationNodeAnimation_61nrs")
states/Run/position = Vector2(455.06985, 187.04254)
states/Walk/node = SubResource("AnimationNodeAnimation_xjw0u")
states/Walk/position = Vector2(455.06985, 0.042541504)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_m6bsd"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_w65gf"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_pg4gy"), "Run", "Jump", SubResource("AnimationNodeStateMachineTransition_p240l"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_q5bn8"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_vuvx4"), "Jump", "Run", SubResource("AnimationNodeStateMachineTransition_lv6f6"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_la81o"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_egpeb"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_5uesj"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_xfrml")]
graph_offset = Vector2(-321.93015, -169.95746)

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_pg4gy"]
filter_enabled = true
filters = [".", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r", "Rig/Skeleton3D:wrist.l", "Rig/Skeleton3D:wrist.r", "SecondAttackTimer"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_0f30q"]
graph_offset = Vector2(-190.07999, -147.83989)
nodes/output/position = Vector2(1000, 160)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_1ekju")
nodes/MoveStateMachine/position = Vector2(-240, 60)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_w65gf")
nodes/AttackOneShot/position = Vector2(260, 140)
nodes/BlockAnimation/node = SubResource("AnimationNodeAnimation_w65gf")
nodes/BlockAnimation/position = Vector2(-220, 260)
nodes/ShieldBlend/node = SubResource("AnimationNodeBlend2_pg4gy")
nodes/ShieldBlend/position = Vector2(80, 40)
nodes/AttackStateMachine/node = SubResource("AnimationNodeStateMachine_0f30q")
nodes/AttackStateMachine/position = Vector2(0, 340)
nodes/ExtraAnimation/node = SubResource("AnimationNodeAnimation_p240l")
nodes/ExtraAnimation/position = Vector2(500, 220)
nodes/ExtraOneShot/node = SubResource("AnimationNodeOneShot_q5bn8")
nodes/ExtraOneShot/position = Vector2(720, -20)
node_connections = [&"output", 0, &"ExtraOneShot", &"AttackOneShot", 0, &"ShieldBlend", &"AttackOneShot", 1, &"AttackStateMachine", &"ShieldBlend", 0, &"MoveStateMachine", &"ShieldBlend", 1, &"BlockAnimation", &"ExtraOneShot", 0, &"AttackOneShot", &"ExtraOneShot", 1, &"ExtraAnimation"]

[node name="GodetteSkin" instance=ExtResource("1_ajt42")]
script = ExtResource("2_2vk48")

[node name="Skeleton3D" parent="Rig" index="0"]
bones/1/position = Vector3(0, 0.39056838, 0)
bones/1/rotation = Quaternion(-1.11122625e-10, 0.043157753, 2.5724098e-09, 0.9990683)
bones/1/scale = Vector3(0.99999994, 1, 0.99999994)
bones/2/rotation = Quaternion(-6.938893e-18, 7.105427e-15, 4.9303798e-32, 1)
bones/2/scale = Vector3(1.0000001, 1, 1.0000001)
bones/3/rotation = Quaternion(8.271806e-25, 3.7252903e-09, -2.75506e-40, 1)
bones/3/scale = Vector3(1, 0.9999999, 1)
bones/4/position = Vector3(0.21200736, 0.13413203, 7.9299625e-08)
bones/4/rotation = Quaternion(-0.559423, -0.060487337, -0.6432551, 0.5192399)
bones/4/scale = Vector3(0.9999991, 0.9999986, 0.9999996)
bones/5/rotation = Quaternion(2.5474645e-08, -4.1649727e-08, -0.49676394, 0.8678858)
bones/5/scale = Vector3(1.0000006, 0.99999946, 1)
bones/6/rotation = Quaternion(1.44633185e-08, 1.2667185e-08, 0.026658092, 0.99964464)
bones/6/scale = Vector3(0.99999994, 1, 1)
bones/7/rotation = Quaternion(-0.32119805, -0.32644373, 0.14640562, 0.8768305)
bones/7/scale = Vector3(0.9999998, 0.99999976, 1.0000004)
bones/8/position = Vector3(8.348433e-10, 0.096125185, -0.057500035)
bones/8/rotation = Quaternion(9.8208075e-05, 9.8206e-05, -0.70674634, 0.7074671)
bones/8/scale = Vector3(1, 1.0000001, 1.0000001)
bones/9/position = Vector3(-0.21200737, 0.13413203, 8.6813984e-08)
bones/9/rotation = Quaternion(-0.6177596, 0.080386445, 0.6174379, 0.48029336)
bones/9/scale = Vector3(0.99999905, 0.9999985, 0.9999996)
bones/10/rotation = Quaternion(3.287346e-08, 5.094024e-08, 0.5198877, 0.85423464)
bones/10/scale = Vector3(1.0000008, 0.9999997, 0.9999999)
bones/11/rotation = Quaternion(-4.946142e-10, -1.4597426e-08, -0.026658095, 0.99964464)
bones/11/scale = Vector3(1.0000001, 1, 1)
bones/12/rotation = Quaternion(-0.31946516, 0.30156955, -0.22796956, 0.8689233)
bones/12/scale = Vector3(0.9999998, 0.9999999, 1.0000002)
bones/13/position = Vector3(-1.5735983e-08, 0.096125126, -0.057499975)
bones/13/rotation = Quaternion(0.0002758225, 0.0003248754, 0.7068209, 0.7073925)
bones/13/scale = Vector3(1, 1.0000001, 1.0000001)
bones/14/rotation = Quaternion(-5.8060785e-11, -0.031341746, -1.880125e-09, 0.99950874)
bones/14/scale = Vector3(1, 0.99999994, 1)
bones/15/position = Vector3(0.17094508, 0.1135872, 1.5994091e-08)
bones/15/rotation = Quaternion(0.99358267, 0.08352382, 0.07404169, 0.018308436)
bones/15/scale = Vector3(0.99999994, 0.9999997, 1.0000008)
bones/16/rotation = Quaternion(0.21479212, 6.559304e-08, -1.4270945e-07, 0.97665983)
bones/16/scale = Vector3(1.0000004, 0.9999999, 0.99999994)
bones/17/rotation = Quaternion(-0.5275403, -0.20892863, 0.046562266, 0.82212037)
bones/17/scale = Vector3(0.99999964, 1.0000006, 0.99999946)
bones/18/rotation = Quaternion(8.493222e-05, 0.92023367, -0.39136925, -1.9167854e-05)
bones/18/scale = Vector3(0.99999994, 0.99999774, 1.0000024)
bones/19/position = Vector3(-0.17094508, 0.11358732, 1.5575491e-08)
bones/19/rotation = Quaternion(0.9969795, -0.029748788, 0.03138831, 0.064511865)
bones/19/scale = Vector3(0.9999999, 0.99999976, 1.0000008)
bones/20/rotation = Quaternion(0.28805888, -6.4023055e-08, 2.0027612e-07, 0.95761275)
bones/20/scale = Vector3(0.99999994, 0.99999976, 0.99999994)
bones/21/rotation = Quaternion(-0.5665079, 0.114420325, -0.009794638, 0.81601524)
bones/21/scale = Vector3(0.99999976, 1.0000006, 0.9999992)
bones/22/rotation = Quaternion(-8.934892e-05, 0.9202217, -0.3913977, 2.0290998e-05)
bones/22/scale = Vector3(1.0000002, 0.9999979, 1.0000024)
bones/23/rotation = Quaternion(0.7071068, -2.2930234e-07, -4.6055177e-08, 0.7071068)
bones/24/position = Vector3(0.20218208, 0.025990263, 0.20518117)
bones/24/rotation = Quaternion(-0.7071068, -7.052851e-08, -7.0528486e-08, 0.7071068)
bones/25/rotation = Quaternion(9.6579225e-09, 1.7795515e-09, 0.98571914, -0.1683977)
bones/26/position = Vector3(-2.6049378e-08, 0.21343614, -5.171498e-09)
bones/26/rotation = Quaternion(-1.01273386e-07, 0.39108434, 0.92035484, -3.3509142e-08)
bones/26/scale = Vector3(1, 0.99999994, 0.9999999)
bones/27/position = Vector3(8.589883e-09, 0.16565004, -2.4096343e-09)
bones/27/rotation = Quaternion(-0.39108434, -6.885001e-08, -6.5628775e-08, 0.92035484)
bones/27/scale = Vector3(1, 0.99999994, 1)
bones/28/rotation = Quaternion(1, -2.3313602e-09, 1.9977652e-07, -1.3421108e-15)
bones/28/scale = Vector3(1, 1.0000001, 0.99999994)
bones/29/rotation = Quaternion(4.1633502e-17, -6.740975e-17, -1.9466928e-08, 1)
bones/30/rotation = Quaternion(0.7071068, -3.8238497e-08, 1.4500867e-07, 0.7071068)
bones/31/rotation = Quaternion(-0.7071068, -7.0528515e-08, -7.05285e-08, 0.7071068)
bones/32/rotation = Quaternion(-5.8358944e-09, 6.4383693e-10, 0.9948094, 0.10175614)
bones/33/position = Vector3(-1.1148221e-08, 0.21343614, -2.509419e-15)
bones/33/rotation = Quaternion(-1.05795486e-07, 0.39108434, 0.92035484, -2.5864253e-08)
bones/33/scale = Vector3(1.0000001, 1, 0.9999999)
bones/34/position = Vector3(-6.3112737e-09, 0.16565004, 2.7069604e-09)
bones/34/rotation = Quaternion(-0.39108434, -6.739311e-08, -6.220015e-08, 0.92035484)
bones/34/scale = Vector3(1.0000001, 1, 1)
bones/35/rotation = Quaternion(1, 3.7652548e-09, 1.9487908e-07, 7.4505815e-09)
bones/35/scale = Vector3(0.99999994, 1, 0.99999994)
bones/36/rotation = Quaternion(1.00614094e-16, -6.740982e-17, -1.5741623e-08, 1)
bones/36/scale = Vector3(1.0000001, 1, 1)
bones/37/rotation = Quaternion(-0.7071068, -7.279511e-08, -7.279509e-08, 0.7071068)
bones/38/position = Vector3(0.52084064, 0.7873039, -0.05763735)
bones/38/rotation = Quaternion(0.7946267, -1.1175871e-07, 0.6070983, -5.9604645e-08)
bones/39/rotation = Quaternion(-0.7071068, -7.279511e-08, -7.279509e-08, 0.7071068)
bones/40/position = Vector3(-0.5108437, 0.78730386, 0.059736922)
bones/40/rotation = Quaternion(-0.7582528, -1.527369e-07, 0.65196073, -1.1175871e-08)
bones/40/scale = Vector3(1, 1.0000001, 1)

[node name="Godette_Head" parent="Rig/Skeleton3D" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_pg4gy")

[node name="RightHandSlot" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(0.00019043515, -0.15073426, -0.988574, -0.9999985, -0.00080785033, -6.864079e-05, -0.00078888057, 0.9885735, -0.15073493, -0.49101266, 0.64042985, 0.10672171)
bone_name = "handslot.r"
bone_idx = 13

[node name="Sword" parent="Rig/Skeleton3D/RightHandSlot" index="0" instance=ExtResource("3_asomj")]

[node name="sword_1handed" parent="Rig/Skeleton3D/RightHandSlot/Sword" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_xjw0u")

[node name="Wand" parent="Rig/Skeleton3D/RightHandSlot" index="1" instance=ExtResource("5_m6bsd")]
visible = false

[node name="wand" parent="Rig/Skeleton3D/RightHandSlot/Wand" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_m6bsd")

[node name="LeftHandSpot" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(0.00010003208, 0.2632648, 0.9647231, 0.99999803, -0.0011193741, 0.0002029076, 0.0011338055, 0.96472216, -0.26326513, 0.50774056, 0.6360885, -0.018379148)
bone_name = "handslot.l"
bone_idx = 8

[node name="Shield" parent="Rig/Skeleton3D/LeftHandSpot" index="0" instance=ExtResource("5_xjw0u")]
transform = Transform3D(1, 1.4210855e-14, 1.7763568e-14, -2.842171e-14, 1.0000001, -2.9802322e-08, 2.1316282e-14, 2.9802322e-08, 1.0000001, -1.1920929e-07, 0.049796067, 0.18277511)

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Idle"

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_0f30q")
anim_player = NodePath("../AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/ShieldBlend/blend_amount = 0.0
parameters/ExtraOneShot/active = false
parameters/ExtraOneShot/internal_active = false
parameters/ExtraOneShot/request = 0

[node name="SecondAttackTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true

[node name="BlinkTimer" type="Timer" parent="." index="5"]
wait_time = 2.1
autostart = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]

[editable path="Rig/Skeleton3D/RightHandSlot/Sword"]
[editable path="Rig/Skeleton3D/RightHandSlot/Wand"]
